<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#cfcecc"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:cardElevation="-2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center|top"
            android:paddingBottom="19dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="-1dp"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/moje_startova_ky"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.2" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_note"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:backgroundTint="#cfcecc"
                    android:paddingBottom="19dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="25dp"
                    app:layout_constraintBottom_toBottomOf="@id/cardView_plus"
                    app:layout_constraintEnd_toStartOf="@id/cardView_plus"
                    app:layout_constraintHorizontal_bias="0.8"
                    app:layout_constraintTop_toTopOf="@id/cardView_plus"
                    tools:targetApi="lollipop">

                    <ImageButton
                        android:id="@+id/btn_note"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="#cfcecc"
                        android:contentDescription="@string/note"
                        android:src="@drawable/note" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_plus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:backgroundTint="#cfcecc"
                    android:paddingBottom="19dp"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.95"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.2"
                    tools:targetApi="lollipop">

                    <ImageButton
                        android:id="@+id/btn_plus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="#cfcecc"
                        android:contentDescription="@string/plus"
                        android:src="@drawable/plus" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_mista"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    app:cardCornerRadius="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toEndOf="@+id/cardView_startovacky"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    app:layout_constraintVertical_bias="0.7">

                    <Button
                        android:id="@+id/btn_mista"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:text="@string/m_sta"
                        android:textColor="@color/black"
                        app:backgroundTint="@color/white" />


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_startovacky"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    app:cardCornerRadius="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/cardView_mista"
                    app:layout_constraintHorizontal_bias="0.3"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    app:layout_constraintVertical_bias="0.7">

                    <Button
                        android:id="@+id/btn_startovacky"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:text="@string/startova_ky"
                        android:textColor="@color/black"
                        app:backgroundTint="@color/white" />


                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="100dp"
            app:cardElevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView2"
            app:layout_constraintVertical_bias="0.02">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="100">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_abc"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="25"
                    app:cardCornerRadius="15dp">

                    <Button
                        android:id="@+id/btn_abc"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:text="@string/abc"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        app:backgroundTint="#FFFFFF" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_nejblize"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="25"
                    app:cardCornerRadius="15dp">

                    <Button
                        android:id="@+id/btn_nejblize"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:text="@string/nejbl_e"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        app:backgroundTint="#FFFFFF" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_zeme"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="25"
                    app:cardCornerRadius="15dp">

                    <Button
                        android:id="@+id/btn_zeme"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:text="@string/zem"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        app:backgroundTint="#FFFFFF"
                        tools:ignore="SmallSp" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_letovo"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="25"
                    app:cardCornerRadius="15dp">

                    <Button
                        android:id="@+id/btn_letovo"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:text="@string/letovo"
                        android:textColor="#3da142"
                        android:textSize="13sp"
                        app:backgroundTint="#FFFFFF"
                        tools:ignore="SmallSp" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView" />


        <TextView
            android:id="@+id/txt_itemCountItem"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="#76746f"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView"
            tools:listitem="@layout/places">

        </androidx.recyclerview.widget.RecyclerView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>